testsuite/tests/v1/if_expr/non_bool/test.out
Error: Invalid expression type
   ╭─[ <working-dir>/script.lkql:2:4 ]
   │
 2 │ if str then print("ERROR") else print("ERROR")
   │    ─┬─  
   │     ╰─── Expecting a "Bool", got a "Str"
───╯
